# RealSpeedometer

./: .gitignore  README.md
RSEmbeddedDevice/: CMakeLists.txt  Car.h  Server.cpp
RSEmbeddedDevice/ClusterController/: ClusterController.cpp  ClusterController.h  ClusterControllerPi3BP.cpp  ClusterControllerPi3BP.h
RSEmbeddedDevice/ClusterServer/: ClusterServer.h  ClusterServerTCP.cpp  ClusterServerTCP.h
RSWindows/: Car.py  ClusterCommunicator.py  Detector.py  SaveDataset.py  main.py  monitorTest.py
RSWindows/Dataset/: datas.pkl  labels.pkl
